// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/NavCookieBanner Basic 1`] = `
<div
  className="psds-navcookiebanner"
>
  <p
    className="psds-navcookiebanner__message"
  >
    <label>
      Pluralsight uses cookies.
    </label>
      
    <a
      href="//www.pluralsight.com/privacy"
    >
      Learn more about your privacy
    </a>
  </p>
  <button
    aria-label="close"
    className="psds-navcookiebanner__dismiss"
    onClick={[Function]}
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="x icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/NavCookieBanner Custom Message 1`] = `
<div
  className="psds-navcookiebanner"
>
  <p
    className="psds-navcookiebanner__message"
  >
    <label>
      This is here to annoy you.
    </label>
  </p>
  <button
    aria-label="close"
    className="psds-navcookiebanner__dismiss"
    onClick={[Function]}
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="x icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
        />
      </svg>
    </div>
  </button>
</div>
`;
